# Robot-Programming-and-Simulation-Laboratory-Exercises

./: README.md
Laser-Visualization/bag/: processed_follow.bag  turtlefollow_2021-12-08-16-53-40.bag
Laser-Visualization/rviz/: exsercise_06.rviz
Laser-Visualization/scripts/: laserscan_to_points.py  process_turtle_follow.py  visualizer.py
Mapping/: fer_building.pgm  laserscan_to_points.py  trajectory_visualizer.py
Mobile-Robot-Navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  enio_krizman.yaml
Ros-Cpp/face_detection/: CMakeLists.txt  objectdetection
Ros-Cpp/linear_algebra/: CMakeLists.txt  enio_krizman  enio_krizman.cpp
Ros-Cpp/turtle_lawnomower/: CMakeLists.txt  enio_krizman.launch  turtle_lawnmower_node.cpp
